--- a/src/sass/templates/_modal.sass
+++ b/src/sass/templates/_modal.sass
@@ -1,6 +1,5 @@
 .modal
   opacity: 0
-  overflow: auto
   visibility: hidden
   display: flex
   justify-content: center
@@ -18,6 +17,8 @@
     opacity: 1
     visibility: visible
   &__dialog
+    overflow: auto
+    max-height: 100%
     position: relative
     padding: 2.357rem 3.49rem 1.928rem 3.5rem
     background: $dark url('../img/modal_bg.svg') no-repeat center / 100%
